--- a/index.html
+++ b/index.html
@@ -1,32 +1,91 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Server Minecraft Wok</title>
+  <meta charset="UTF-8">
+  <title>Server Minecraft SurvHDX</title>
   <style>
-    body { background: #111; color: #eee; font-family: sans-serif; text-align: center; margin: 30px; }
-    h1 { color: #0f0; }
-    p { font-size: 18px; margin: 20px 0; }
-    img { width: 80%; max-width: 500px; margin: 10px 0; border-radius: 10px; }
+    body {
+      margin: 0;
+      background-color: #0f0f0f;
+      color: #fff;
+      font-family: sans-serif;
+      text-align: center;
+    }
+    header {
+      padding: 60px 20px;
+      background: linear-gradient(135deg, #1e90ff, #00bfff);
+    }
+    header h1 {
+      margin: 0;
+      font-size: 40px;
+    }
+    header p {
+      font-size: 18px;
+      margin-top: 10px;
+    }
+    .section {
+      padding: 40px 20px;
+    }
+    .section h2 {
+      font-size: 28px;
+      margin-bottom: 20px;
+      color: #00ff99;
+    }
+    .gallery img {
+      width: 90%;
+      max-width: 500px;
+      margin: 10px 0;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #00ff99;
+    }
+    .btn {
+      display: inline-block;
+      margin: 20px 10px 0;
+      padding: 15px 30px;
+      background: #00ff99;
+      color: #000;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+    footer {
+      padding: 20px;
+      background: #1a1a1a;
+      font-size: 14px;
+      color: #888;
+      margin-top: 50px;
+    }
   </style>
 </head>
 <body>
-  <h1>Selamat Datang di Server Minecraft Wok!</h1>
-  <p>IP Server: play.survhdx.my.id</p>
 
+<header>
+  <h1>SurvHDX Server Minecraft</h1>
+  <p>IP Server: <strong>play.survhdx.my.id</strong></p>
+  <a class="btn" href="https://discord.gg/yourdiscord" target="_blank">Join Discord</a>
+</header>
+
+<div class="section">
   <h2>Suasana Server</h2>
-  <img src="images/suasana1.png">
-  <img src="images/suasana2.png">
-  <img src="images/suasana3.png">
-  <img src="images/suasana4.png">
-  <img src="images/suasana5.png">
+  <div class="gallery">
+    <img src="images/suasana1.png" alt="Suasana Server 1">
+    <img src="images/suasana2.png" alt="Suasana Server 2">
+    <img src="images/suasana3.png" alt="Suasana Server 3">
+  </div>
+</div>
 
-  <p>Di server ini kamu bisa survival, build, PVP, dan banyak event seru bareng player lain!</p>
+<div class="section">
+  <h2>Fitur-Fitur Keren</h2>
+  <p>✅ Survival 1.21+</p>
+  <p>✅ PvP Event & Custom Item</p>
+  <p>✅ Clan & Leaderboard</p>
+  <p>✅ No Pay To Win</p>
+  <p>✅ Friendly Community</p>
+</div>
 
-  <h2>Fitur Server</h2>
-  <img src="images/fitur1.png">
-  <img src="images/fitur2.png">
-  <img src="images/fitur3.png">
-
-  <p>Yuk join sekarang dan rasakan petualangan seru di server Wok!</p>
+<footer>
+  &copy; 2025 SurvHDX | Web by handexit
+</footer>
+  
 </body>
 </html>
