--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     body {
       margin: 0;
       font-family: sans-serif;
+      font-size: 13px;
       background: url('images/bg.jpg') no-repeat center center fixed;
       background-size: cover;
       backdrop-filter: blur(6px);
@@ -14,47 +15,47 @@
     }
     .kotak-ungu {
       background: #9b59b6;
-      padding: 15px;
-      margin: 20px;
-      border-radius: 10px;
+      padding: 10px;
+      margin: 15px;
+      border-radius: 8px;
       color: black;
     }
     .judul {
-      font-size: 36px;
+      font-size: 22px;
       font-weight: bold;
       text-align: center;
     }
     .section {
-      margin: 20px;
+      margin: 15px;
     }
     .perkenalan {
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 15px;
       flex-wrap: wrap;
     }
     .perkenalan img {
-      width: 100px;
+      width: 80px;
       border-radius: 50%;
     }
     .galeri img {
-      width: 150px;
-      margin: 5px;
-      border-radius: 8px;
+      width: 120px;
+      margin: 3px;
+      border-radius: 6px;
     }
     .slider {
       display: flex;
       align-items: center;
-      gap: 10px;
+      gap: 8px;
     }
     .slider img {
-      width: 250px;
-      border-radius: 8px;
+      width: 220px;
+      border-radius: 6px;
     }
     .peraturan {
       color: red;
       font-weight: bold;
-      margin: 5px 0;
+      margin: 3px 0;
     }
     .linkijo {
       color: #00ff7f;
@@ -67,10 +68,19 @@
     footer {
       background: #9b59b6;
       color: white;
-      padding: 15px;
-      margin-top: 30px;
+      padding: 10px;
+      margin-top: 20px;
       text-align: center;
-      border-radius: 8px;
+      border-radius: 6px;
+      font-size: 12px;
+    }
+    h3 {
+      font-size: 15px;
+      margin: 8px 0;
+    }
+    p {
+      font-size: 13px;
+      margin: 5px 0;
     }
   </style>
 </head>
@@ -131,7 +141,7 @@
 
 <footer>
   &copy; 2025 @handexit <br>
-  Contact - Tiktok: @hdxserver - Cell: 0821xxxxxx
+  Contact - Tiktok: @hdxserver - Cell: 0821xxxxxxx
 </footer>
 
 <script>
