--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       backdrop-filter: blur(6px);
       color: black;
     }
+    .teksbesar {
+  font-size: 16px;
+  font-weight: bold;
+    }
     .kotak-ungu {
       background: #9b59b6;
       padding: 8px;
@@ -58,7 +62,7 @@
       margin: 2px 0;
       font-size: 11px;
     }
-    .linkijo {
+    .linkbiru {
       color: #00ff7f;
       font-weight: bold;
       font-size: 11px;
@@ -81,6 +85,7 @@
       font-size: 12px;
       margin: 6px 0;
     }
+    }
     p {
       font-size: 11px;
       margin: 4px 0;
@@ -90,13 +95,13 @@
 <body>
 
 <div class="kotak-ungu">
-  <div class="judul">Minecraft Server Survival HDX</div>
+  <div class="judul">Minecraft Server Survival</div>
 </div>
 
 <div class="section">
   <div class="perkenalan">
     <img src="images/profile.png" alt="Logo">
-    <p>Hai, aku Han! Aku adalah pemilik server HDX. Server ini dibuat untuk kamu yang suka survival seru, main bareng, dan komunitas asik!</p>
+    <p class="teksbesar">Hai, aku Han! Aku adalah pemilik server HDX. Server ini dibuat untuk kamu yang suka survival seru, main bareng, dan komunitas asik!</p>
   </div>
 </div>
 
@@ -131,20 +136,20 @@
 
 <div class="section">
   <h3>Server juga punya akses rank!</h3>
-  <a href="https://rankhdx" class="linkijo">👉 Click di sini untuk lihat list & fitur rank!</a>
+  <a href="https://rankhdx" class="linkbiru">👉 Click di sini untuk lihat list & fitur rank!</a>
 </div>
 
 <div class="section">
   <h3>Buruan join!</h3>
-  <a href="https://chat.whatsapp.com/yourlink" class="linkbiru">Click di sini ke grup WA</a>
-  <p>Atau langsung pakai IP & Port:</p>
+  <a href="https://chat.whatsapp.com/L3aMLYLok7OJ5ckkgvIshd?mode=ac_c" class="linkbiru">Click di sini ke grup WA</a>
+  <p>IP & Port:</p>
   <div><strong>IP:</strong> survhdx.my.id</div>
   <div><strong>Port:</strong> 25583</div>
 </div>
 
 <footer>
   &copy; 2025 @handexit <br>
-  Contact - Tiktok: @hdxserver - Cell: 0821xxxxxxx
+  - Tiktok hdxserver -
 </footer>
 
 <script>
