--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
     }
     .peraturan {
       color: red;
+      font-size: 16px;
       font-weight: bold;
-      margin: 2px 0;
-      font-size: 11px;
     }
     .linkbiru {
       color: #00ff7f;
@@ -106,7 +105,7 @@
 </div>
 
 <div class="section">
-  <h3>Di server ini seru dan asik!</h3>
+  <h3 class="teksbesar">Di server ini seru dan asik!</h3>
   <div class="galeri">
     <img src="images/image1.png">
     <img src="images/image2.png">
@@ -117,7 +116,7 @@
 </div>
 
 <div class="section">
-  <h3>Di server ini juga punya fitur keren!</h3>
+  <h3 class="teksbesar">Di server ini juga punya fitur keren!</h3>
   <div class="slider">
     <button onclick="ganti(-1)">←</button>
     <img id="slide" src="images/peraturan1.png">
@@ -126,7 +125,7 @@
 </div>
 
 <div class="section">
-  <h3>Server juga punya aturan!</h3>
+  <h3 class="teksbesar">Server juga punya aturan!</h3>
   <div class="peraturan">‼️ No Rusuh</div>
   <div class="peraturan">‼️ No Cheat</div>
   <div class="peraturan">‼️ No Toxic</div>
@@ -135,12 +134,12 @@
 </div>
 
 <div class="section">
-  <h3>Server juga punya akses rank!</h3>
+  <h3 class="teksbesar">Server juga punya akses rank!</h3>
   <a href="https://rankhdx" class="linkbiru">👉 Click di sini untuk lihat list & fitur rank!</a>
 </div>
 
 <div class="section">
-  <h3>Buruan join!</h3>
+  <h3 class="teksbesar">Buruan join!</h3>
   <a href="https://chat.whatsapp.com/L3aMLYLok7OJ5ckkgvIshd?mode=ac_c" class="linkbiru">Click di sini ke grup WA</a>
   <p>IP & Port:</p>
   <div><strong>IP:</strong> survhdx.my.id</div>
