--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 </head>
 <body>
 
+  <div class="judul-galeri">
   <h1>Galeri Server HDX</h1>
+  </div>
 
   <div class="galeri">
     <img src="images/server1.jpg" alt="Server 1">
