--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Galeri HDX</title>
+  <title>Galeri Server HDX</title>
   <style>
     * {
       margin: 0;
@@ -15,31 +15,44 @@
       color: white;
       overflow-x: hidden;
     }
-    h1 {
+    .judul-galeri {
+      background: rgba(128, 0, 128, 0.5);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      padding: 20px;
       text-align: center;
-      font-size: 32px;
-      margin: 20px 0;
+      border-radius: 15px;
+      margin: 20px;
+    }
+    .judul-galeri h1 {
+      font-size: 50px;
+      color: white;
+      font-weight: bold;
+      margin: 0;
     }
     .galeri {
       display: flex;
-      height: 100vh;
-      overflow: hidden;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      padding: 20px;
+      flex-wrap: wrap;
     }
     .galeri img {
-      flex: 1;
-      height: 100vh;
+      height: 90vh;
       width: auto;
-      object-fit: contain;
+      border-radius: 10px;
+      object-fit: cover;
       background: #000;
     }
     .deskripsi {
       text-align: center;
       padding: 20px;
-      font-size: 16px;
+      font-size: 18px;
       line-height: 1.6;
     }
     .copyright {
-      margin: 30px 0 0 0;
+      margin: 30px 0 20px 0;
       background: rgba(128, 0, 128, 0.5);
       backdrop-filter: blur(8px);
       padding: 10px;
@@ -56,7 +69,7 @@
 <body>
 
   <div class="judul-galeri">
-  <h1>Galeri Server HDX</h1>
+    <h1>Galeri Server HDX</h1>
   </div>
 
   <div class="galeri">
@@ -65,8 +78,8 @@
   </div>
 
   <div class="deskripsi">
-    <p>Ini adalah tampilan server survival HDX yang seru dan keren.  
-    Ayo join dan rasakan pengalaman survival bareng komunitas asik!</p>
+    <p>Ini adalah tampilan server Survival HDX yang seru, asik, dan penuh petualangan!  
+    Ayo join bareng komunitasnya sekarang!</p>
   </div>
 
   <div class="copyright">
