--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Minecraft Server Name]</title>
+    <title>[Server Survival HDX]</title>
     <link rel="icon" type="image/png" href="media/favicon.png">
     <link rel="stylesheet" href="media/style.css">
     <link href="https://fonts.bunny.net/css?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
           <img class="main1_logo" src="media/logo.png" alt="logo">
         </a>
         <div class="main1_description">
-          <a>Minecraft,<br>like</a>
+          <a><strong>Survival Hdx</strong>,<br>like</a>
           <a class="main1_actcent">already done before</a><a>.</a>
         </div>
         <div class="main1_ipcopier_div">
