--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
           <img class="main1_logo" src="media/logo.png" alt="logo">
         </a>
         <div class="main1_description">
-          <a><strong>Survival Hdx</strong>,<br>like</a>
-          <a class="main1_actcent">already done before</a><a>.</a>
+          <a>𝗦𝘂𝗿𝘃𝗶𝘃𝗮𝗹 𝗛𝗗𝗫,<br>You Like?</a>
+          <a class="main1_actcent">Come on, Let's Join! </a><a>.</a>
         </div>
         <div class="main1_ipcopier_div">
           <button class="main1_ipcopier" onclick="copyText()" type="button">
-            <span class="main1_ipcopier_text1">play.example.com</span>
+            <span class="main1_ipcopier_text1">survhdx.my.id</span>
             <br>
-            <span class="main1_ipcopier_text2">Click to copy</span>
+            <span class="main1_ipcopier_text2">Click To Copy</span>
           </button>
           <script>
             function copyText() {
@@ -66,7 +66,7 @@
             $(document).ready(function() {
             $('.main1_ipcopier').click(function() {
                 var popup = $('<div>', { class: 'main1_popup' })
-                .append($('<h3 class="copy_confirm">').text('Copied IP to clipboard'))
+                .append($('<h3 class="copy_confirm">').text('Copied Teks To Clipboard'))
                 $(this).after(popup);
                 setTimeout(function() {
                 popup.remove();
@@ -95,7 +95,7 @@
       </div>
       <div id="more"></div>
       <div class="main2">
-        <a class="headline">What we have</a>
+        <a class="headline">Features We Have!</a>
         <div class="main2_features_div">
           <div class="main2_feature">
             <img class="main2_feature_img" alt="Feature Image" src="media/placeholder.png">
@@ -128,7 +128,7 @@
       <div class="main4">
         <a class="headline">Join the Discord</a>
         <div class="main4_dc_div">
-          <iframe class="main4_dc_widget" src="https://imgur.com/78RPeUY.png" width="350" height="500" title="discord" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+          <img class="main2_feature_img" src="media/placeholder.png" width="350" height="500" title="discord" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           <div class="main4_dc_description_div">
             <a class="main4_dc_description_title">Let's talk!</a>
             <a class="main4_dc_description"> ・Meet other players <br> ・Ask questions <br> ・Get notified about updates <br> ・Give feedback  <br><br> &amp; more </a>
