--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
       </div>
       <div id="discord"></div>
       <div class="main4">
-        <a class="headline">Join the Discord</a>
+        <a class="headline">Join The Group Whatsapp</a>
         <div class="main4_dc_div">
-          <img class="main2_feature_img" src="media/placeholder.png" width="350" height="500" title="discord" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+          <img class="main2_feature_img" src="media/placeholder.png" width="350" height="500" title="whatsapp" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           <div class="main4_dc_description_div">
             <a class="main4_dc_description_title">Let's talk!</a>
             <a class="main4_dc_description"> ・Meet other players <br> ・Ask questions <br> ・Get notified about updates <br> ・Give feedback  <br><br> &amp; more </a>
@@ -146,16 +146,16 @@
             <img class="main5_admins_img" alt="admin member img" src="media/member_placeholder.webp">
             <div class="main5_admins_description_div">
               <a class="main5_admins_description_rank main5_admins_description_rank_owner">[Owner]</a>
-              <a class="main5_admins_description_title" href="https://example.com">Owner Name</a>
-              <a class="main5_admins_description">Owner<br>description</a>
+              <a class="main5_admins_description_title" href="https://example.com">Han. RJ</a>
+              <a class="main5_admins_description">Deskripsi<br>Baik, Ramah, Tidak Toxic, Masih Muda</a>
             </div>
           </div>
           <div class="main5_admins_div main5_admins_dev_type1">
             <img class="main5_admins_img" alt="admin member img" src="media/member_placeholder.webp">
             <div class="main5_admins_description_div">
               <a class="main5_admins_description_rank main5_admins_description_rank_admin">[Admin]</a>
-              <a class="main5_admins_description_title" href="https://example.com">Admin Name</a>
-              <a class="main5_admins_description">Admin<br>description</a>
+              <a class="main5_admins_description_title" href="https://example.com">SiKayy</a>
+              <a class="main5_admins_description">Admin<br>Baik, Dermawan, Pintar Dalam Mengatasi Server</a>
             </div>
           </div>
         </div>
@@ -163,51 +163,51 @@
           <div class="main5_supporters_div">
             <img class="main5_supporters_img" alt="supporters member img" src="media/member_placeholder.webp">
             <div class="main5_supporters_description_div">
-              <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Supporter]</a>
-              <a class="main5_supporters_description_title">Replacable Supporter 1</a>
-              <a class="main5_supporters_description">Supporter<br>Description</a>
+              <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Donatur]</a>
+              <a class="main5_supporters_description_title">Panjul</a>
+              <a class="main5_supporters_description">Supporter<br>Keren, Cool, Dermawan</a>
             </div>
           </div>
           <div class="main5_supporters_div">
             <img class="main5_supporters_img" alt="supporters member img" src="media/member_placeholder.webp">
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Supporter]</a>
-              <a class="main5_supporters_description_title">Replacable Supporter 2</a>
-              <a class="main5_supporters_description">Supporter<br>Description</a>
+              <a class="main5_supporters_description_title">Aqil</a>
+              <a class="main5_supporters_description">Supporter<br>Baik, Kompetif, Rajin Aktif</a>
             </div>
           </div>
           <div class="main5_supporters_div">
             <img class="main5_supporters_img" alt="supporters member img" src="media/member_placeholder.webp">
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Supporter]</a>
-              <a class="main5_supporters_description_title">Replacable Supporter 3</a>
-              <a class="main5_supporters_description">Supporter<br>Description</a>
+              <a class="main5_supporters_description_title">Sayang Nya Belum Ada...</a>
+              <a class="main5_supporters_description">Supporter<br></a>
             </div>
           </div>
           <div class="main5_supporters_div">
             <img class="main5_supporters_img" alt="supporters member img" src="media/member_placeholder.webp">
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Supporter]</a>
-              <a class="main5_supporters_description_title">Replacable Supporter 4</a>
-              <a class="main5_supporters_description">Supporter<br>Description</a>
+              <a class="main5_supporters_description_title">Sayang Nya Belum Ada...</a>
+              <a class="main5_supporters_description">Supporter<br></a>
             </div>
           </div>
         </div>
       </div>
       <div id="join"></div>
       <div class="main3">
-        <a class="headline">How to join</a>
+        <a class="headline">Bagaimana Cara Masuk?</a>
         <div class="main3_join_div_div">
           <div class="main3_join_div">
             <a class="main3_join_title">Java</a>
             <div class="main3_join_content_div">
               <div class="main3_join_categories">
                 <a>IP:</a>
-                <a>Version:</a>
+                <a>Ver:</a>
               </div>
               <div class="main3_join_values">
-                <a>play.example.com</a>
-                <a>1.20.1</a>
+                <a>survhdx.my.id:25583</a>
+                <a>1.16 - 1.21</a>
               </div>
             </div>
           </div>
@@ -219,8 +219,8 @@
                 <a>Port:</a>
               </div>
               <div class="main3_join_values">
-                <a>be.example.com</a>
-                <a>69420</a>
+                <a>survhdx.my.id</a>
+                <a>25583</a>
               </div>
             </div>
           </div>
@@ -228,7 +228,7 @@
       </div>
     </div>
     <footer class="copyright_div">
-      <a href="https://github.com/FQQD/MCServer-Web-Template" class="copyright">Made by FQQD 2023 - Edited by [Name] [Year]</a>
+      <a href="Tiktok @server.survhdx" class="copyright">Made By Handexit 2025 - Account Tiktok: @handexit</a>
     </footer>
   </body>
 </html>
