--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
       </div>
       <div id="more"></div>
       <div class="main2">
-        <a class="headline">Features We Have!</a>
+        <a class="headline">Fitur Yang Di Miliki</a>
         <div class="main2_features_div">
           <div class="main2_feature">
             <img class="main2_feature_img" alt="Feature Image" src="media/placeholder.png">
-            <a class="main2_feature_headline">Feature 1</a>
-            <a class="main2_feature_text">Feature description</a>
+            <a class="main2_feature_headline">Ranks</a>
+            <a class="main2_feature_text">Ranks - Memiliki Akses Yang Telah Di Berikan</a>
           </div>
           <div class="main2_feature">
             <img class="main2_feature_img" alt="Feature Image" src="media/placeholder.png">
-            <a class="main2_feature_headline">Feature 2</a>
+            <a class="main2_feature_headline">Shops</a>
             <a class="main2_feature_text">Feature description</a>
           </div>
           <div class="main2_feature">
@@ -126,13 +126,13 @@
       </div>
       <div id="discord"></div>
       <div class="main4">
-        <a class="headline">Join The Group Whatsapp</a>
+        <a class="headline">Grup Whatsapp</a>
         <div class="main4_dc_div">
           <img class="main2_feature_img" src="media/placeholder.png" width="350" height="500" title="whatsapp" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           <div class="main4_dc_description_div">
-            <a class="main4_dc_description_title">Let's talk!</a>
-            <a class="main4_dc_description"> ・Meet other players <br> ・Ask questions <br> ・Get notified about updates <br> ・Give feedback  <br><br> &amp; more </a>
-            <a href="https://discord.gg/INVITE" class="main4_dc_button_a">
+            <a class="main4_dc_description_title">Ayo Bergabung!</a>
+            <a class="main4_dc_description"> ・Bertemu Player Lain <br> ・Saling Bertanya <br> ・Mencari Teman Team <br> ・Berikan Pendapat  <br><br> &amp; Kami Tunggu Kehadiran Kamu </a>
+            <a href="https://chat.whatsapp.com/L3aMLYLok7OJ5ckkgvIshd?mode=ac_c" class="main4_dc_button_a">
               <div class="main4_dc_button">Join</div>
             </a>
           </div>
@@ -147,7 +147,7 @@
             <div class="main5_admins_description_div">
               <a class="main5_admins_description_rank main5_admins_description_rank_owner">[Owner]</a>
               <a class="main5_admins_description_title" href="https://example.com">Han. RJ</a>
-              <a class="main5_admins_description">Deskripsi<br>Baik, Ramah, Tidak Toxic, Masih Muda</a>
+              <a class="main5_admins_description">Informasi :<br>Tidak Terlalu Banyak Berbicara</a>
             </div>
           </div>
           <div class="main5_admins_div main5_admins_dev_type1">
@@ -155,7 +155,7 @@
             <div class="main5_admins_description_div">
               <a class="main5_admins_description_rank main5_admins_description_rank_admin">[Admin]</a>
               <a class="main5_admins_description_title" href="https://example.com">SiKayy</a>
-              <a class="main5_admins_description">Admin<br>Baik, Dermawan, Pintar Dalam Mengatasi Server</a>
+              <a class="main5_admins_description">Informasi :<br>Ini Pintar Dalam Mengatasi Server</a>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Donatur]</a>
               <a class="main5_supporters_description_title">Panjul</a>
-              <a class="main5_supporters_description">Supporter<br>Keren, Cool, Dermawan</a>
+              <a class="main5_supporters_description">Informasi :<br>Keren, Cool, Dermawan</a>
             </div>
           </div>
           <div class="main5_supporters_div">
@@ -173,7 +173,7 @@
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Supporter]</a>
               <a class="main5_supporters_description_title">Aqil</a>
-              <a class="main5_supporters_description">Supporter<br>Baik, Kompetif, Rajin Aktif</a>
+              <a class="main5_supporters_description">Informasi :<br>Baik, Kompetif, Rajin Aktif</a>
             </div>
           </div>
           <div class="main5_supporters_div">
@@ -181,7 +181,7 @@
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Supporter]</a>
               <a class="main5_supporters_description_title">Sayang Nya Belum Ada...</a>
-              <a class="main5_supporters_description">Supporter<br></a>
+              <a class="main5_supporters_description"><br></a>
             </div>
           </div>
           <div class="main5_supporters_div">
@@ -189,7 +189,7 @@
             <div class="main5_supporters_description_div">
               <a class="main5_supporters_description_rank main5_supporters_description_rank_supporter">[Supporter]</a>
               <a class="main5_supporters_description_title">Sayang Nya Belum Ada...</a>
-              <a class="main5_supporters_description">Supporter<br></a>
+              <a class="main5_supporters_description"><br></a>
             </div>
           </div>
         </div>
