--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <nav class="desktop_navbar">
       <a href="#"><img class="desktop_navbar_logo_img" src="media/logo_small.png" alt="logo"></a>
-      <a href="https://wiki.example.com/" class="desktop_navbar_link">Wiki</a>
-      <a href="#discord" class="desktop_navbar_link scroll">Community</a>
-      <a href="#about" class="desktop_navbar_link scroll">About Us</a>
+      <a href="#p" class="desktop_navbar_link">About Us</a>
+      <a href="tiktok.com/@survhdx.server" class="desktop_navbar_link scroll">Tiktok</a>
+      <a href="https://whatsapp.com/channel/0029VbAzjGPAO7RBVvzuDF3T" class="desktop_navbar_link scroll">Store</a>
       <div class="desktop_navbar_link2_div">
-          <a href="#join" class="desktop_navbar_link2 scroll">Join Us!</a>
+          <a href="wa.me/62852" class="desktop_navbar_link2 scroll">Contact</a>
       </div>
     </nav>
     <div class="mobile_navbar">
       <a href="#" class="mobile_navbar_logo_img_a"><img class="mobile_navbar_logo_img" src="media/logo_small.png" alt="logo"></a>
       <div id="mobile_navbar_links">
-          <a class="mobile_navbar_link" onclick="mobile_navbar_link_hider()" href="https://wiki.example.com/">Wiki</a>
-          <a class="mobile_navbar_link scroll" onclick="mobile_navbar_link_hider()" href="#discord">Community</a>
-          <a class="mobile_navbar_link scroll" onclick="mobile_navbar_link_hider()" href="#about">About Us</a>
-          <a class="mobile_navbar_link scroll" onclick="mobile_navbar_link_hider()" href="#join">Join Us</a>
+          <a class="mobile_navbar_link" onclick="mobile_navbar_link_hider()" href="">About Us</a>
+          <a class="mobile_navbar_link scroll" onclick="mobile_navbar_link_hider()" href="tiktok.com/@survhdx.server">Tiktok</a>
+          <a class="mobile_navbar_link scroll" onclick="mobile_navbar_link_hider()" href="https://ibb.co/0yLhjkSQ">Store</a>
+          <a class="mobile_navbar_link scroll" onclick="mobile_navbar_link_hider()" href="wa.me/62852">Contact</a>
         </div>
         <div class="icon" onclick="mobile_navbar_link_hider()">
             <i class="fa fa-bars"></i>
@@ -95,17 +95,17 @@
       </div>
       <div id="more"></div>
       <div class="main2">
-        <a class="headline">Fitur Yang Di Miliki</a>
+        <a class="headline">Fasilitas Server</a>
         <div class="main2_features_div">
           <div class="main2_feature">
-            <img class="main2_feature_img" alt="Feature Image" src="media/placeholder.png">
-            <a class="main2_feature_headline">Ranks</a>
-            <a class="main2_feature_text">Ranks - Memiliki Akses Yang Telah Di Berikan</a>
+            <img class="main2_feature_img" alt="Feature Image" src="media/1.png">
+            <a class="main2_feature_headline">Lobby</a>
+            <a class="main2_feature_text">Lobby adalah tempat kemunculan awal player saat masuk server!</a>
           </div>
           <div class="main2_feature">
-            <img class="main2_feature_img" alt="Feature Image" src="media/placeholder.png">
-            <a class="main2_feature_headline">Shops</a>
-            <a class="main2_feature_text">Feature description</a>
+            <img class="main2_feature_img" alt="Feature Image" src="media/2.png">
+            <a class="main2_feature_headline">Npc</a>
+            <a class="main2_feature_text">Npc adalah boneka yang di pergunakan player untuk mengakses fitur lebih mudah</a>
           </div>
           <div class="main2_feature">
             <img class="main2_feature_img" alt="Feature Image" src="media/placeholder.png">
