--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Hacker Bootstrap Theme</a>
+                <a class="navbar-brand" href="#">H4ZONE SURVHDX COMMUNITY</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
