--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>H4ZONE SurvHDX Community</title>
+    <title>H4ZONE SURVHDX COMMUNITY</title>
     <link href="css/hacker.css" rel="stylesheet">
 
     <style>
