--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Primary Meta Tags -->
-        <title>YourServer</title>
-        <meta name="title" content="YourServer" />
+        <title>Survhdx Web Servers</title>
+        <meta name="title" content="SurvHDX" />
         <meta name="description" content="YourServer Description" />
 
         <!-- Open Graph / Facebook -->
