--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </head>
     <body>
         <main>
-            <h1>Your Server</h1>
+            <h1>SurvHDX Server</h1>
             <button onclick="copyIp()">
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -56,7 +56,7 @@
                     />
                 </svg>
                 <!-- Remember to change the ip in the copyIp function -->
-                mc.yourserver.com
+                survhdx.my.id
             </button>
             <p>
                 Lorem ipsum dolor sit <strong>amet</strong> consectetur
