--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 doloremque dolorum molestias.
             </p>
             <nav>
-                <a href="" title="">Store</a>
+                <a href="" title="">Rank</a>
                 <a href="" title="">Vote</a>
                 <a href="" title="">Banlist</a>
                 <a href="" title="" target="_blank">Example</a>
