Update description in index.html
Replace placeholder text with a description of SurvHDX server.

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
                 survhdx.my.id
             </button>
             <p>
-                Lorem ipsum dolor sit <strong>amet</strong> consectetur
-                adipisicing elit. Perferendis provident velit quibusdam
-                doloremque dolorum molestias.
+                “<strong>SurvHDX</strong> atau dikenal <strong>SurvHiDexa</strong>
+                adalah server PvP berkecepatan tinggi yang dibuat untuk pemain
+                yang suka pertarungan bersih, mekanik yang adil, dan lingkungan kompetitif.
+                Masuk, asah skill kamu, dan rasakan PvP seperti seharusnya.”      
             </p>
             <nav>
                 <a href="" title="">Rank</a>
