--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </head>
     <body>
         <main>
-            <h1>SurvHDX Server</h1>
+            <h1>SurvHiDexa</h1>
             <button onclick="copyIp()">
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -56,19 +56,19 @@
                     />
                 </svg>
                 <!-- Remember to change the ip in the copyIp function -->
-                survhdx.my.id
+                survhdx.my.id - 25548
             </button>
             <p>
-                “<strong>SurvHDX</strong> atau dikenal <strong>SurvHiDexa</strong>
-                adalah server PvP berkecepatan tinggi yang dibuat untuk pemain
-                yang suka pertarungan bersih, mekanik yang adil, dan lingkungan kompetitif.
-                Masuk, asah skill kamu, dan rasakan PvP seperti seharusnya.”      
+                “<strong>SurvHDX</strong>, also known as <strong>SurvHiDexa</strong>,
+                is a high-speed PvP server built for players who enjoy clean fights,
+                fair mechanics, and a truly competitive environment. Jump in,
+                sharpen your skills, and experience PvP the way it’s meant to be.”     
             </p>
             <nav>
-                <a href="" title="">Rank</a>
-                <a href="" title="">Vote</a>
-                <a href="" title="">Banlist</a>
-                <a href="" title="" target="_blank">Example</a>
+                <a href="https://store.survhdx.my.id" title="">Ranks List</a>
+                <a href="https://minecraftservers.org/server/680504" title="">Server Voting</a>
+                <a href="https://chat.whatsapp.com/L3aMLYLok7OJ5ckkgvIshd" title="">Whatsapp Group</a>
+                <a href="https://page.survhdx.my.id" title="" target="_blank">Read More</a>
             </nav>
         </main>
         <script>
