--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <script>
             function copyIp() {
                 navigator.clipboard
-                    .writeText("mc.yourserver.com")
+                    .writeText("bedrock: survhdx.my.id - port: 25548 | java: survhdx.my.id")
                     .catch((error) => {
                         console.error(
                             `Failed to copy "${text}" to clipboard: ${error}`
